--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,7 +30,7 @@
         android:layout_height="150dp"
         android:id="@+id/imageView"
         android:src="@android:mipmap/sym_def_app_icon"
-        android:layout_above="@+id/button"
+        android:layout_above="@+id/buttonPlay"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="26dp" />
 
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Play"
-        android:id="@+id/button"
+        android:id="@+id/buttonPlay"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/button2"
         android:layout_alignStart="@+id/button2"
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:text="High Score"
         android:id="@+id/button2"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/buttonPlay"
         android:layout_centerHorizontal="true" />
 
     <Button
