--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -85,4 +85,25 @@
         android:layout_alignRight="@+id/textPartB"
         android:layout_alignEnd="@+id/textPartB"
         android:textSize="40sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/Score"
+        android:id="@+id/textScore"
+        android:layout_marginTop="66dp"
+        android:layout_below="@+id/buttonChoice1"
+        android:layout_alignRight="@+id/buttonChoice1"
+        android:layout_alignEnd="@+id/buttonChoice1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/Level"
+        android:id="@+id/textLevel"
+        android:layout_alignTop="@+id/textScore"
+        android:layout_alignLeft="@+id/buttonChoice3"
+        android:layout_alignStart="@+id/buttonChoice3" />
 </RelativeLayout>
