--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,7 +29,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/imageView"
-        android:src="@android:mipmap/sym_def_app_icon"
+        android:src="@mipmap/home_screen_image"
         android:layout_above="@+id/buttonPlay"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="26dp" />
